update styles and some words

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <h3>Writing</h3>
         <div class="subsection">
             <a href="http://bit.ly/28RRuMV"><h4>CLion and CMake</h4></a>
-            <span class="writingDescription">Learn how to create static libraries and link to them in CLion with
-                CMake.</span>
+            <p>Learn how to create static libraries and link to them in CLion with
+                CMake.</p>
         </div>
         <div class="subsection">
             <a href="http://bit.ly/1XTa6yO"><h4>3D Lagging Camera in Unity</h4></a>
-            <span class="writingDescription">A tutorial on how I created a 3rd Person camera in Unity that follows and
-                lags behind the player.</span>
+            <p>A tutorial on how I created a 3rd Person camera in Unity that follows and
+                lags behind the player.</p>
         </div>
     </div>
     <hr/>
@@ -135,7 +135,8 @@
             <a href="http://bit.ly/1N9dHr4" target="_blank"><h4>Increasing Precision for Extended Reach 3D
                 Manipulation</h4></a>
             <p>
-                One topic I've researched in virtual reality is the manipulation of objects far away from the user.<br/>
+                One topic I've researched in virtual reality is the precise manipulation of objects far away from the
+                user.<br/>
                 You can read all about it by <a href="http://bit.ly/1N9dHr4" target="_blank">clicking here.</a>
             </p>
         </div>
