new layout part 1

--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
         <div class="subsection">
             <a href="http://github.com/limeoats/project-euler" target="_blank"><h4>Project Euler</h4></a>
             <p>
-                I spend a lot of my time working on solutions to the <a href="http://projecteuler.net" target="_blank">Project
-                Euler</a> problems in C++.<br/>
-                <a href="http://github.com/limeoats/project-euler" target="_blank">Click here</a> to see some of my
-                code.
+                I spend a lot of my time working on solutions to the Project Euler problems in C++.<br/>
+                <div class="pbs">
+                    <a href="http://github.com/limeoats/project-euler" target="_blank" class="projectButton">Github</a>
+                    <a href="http://projecteuler.net" target="_blank" class="projectButton">Website</a>
+                </div>
             </p>
         </div>
     </div>
@@ -91,15 +92,19 @@
             <a href="a-note-for-lime.html"><h4>A Note For Lime</h4></a>
             <p>
                 For our one year anniversary, I made my girlfriend a game.<br/>
-                <a href="a-note-for-lime.html">Click here</a> to check it out.
+                <div class="pbs">
+                    <a href="a-note-for-lime.html" class="projectButton">Open</a>
+                </div>
             </p>
         </div>
         <div class="subsection">
             <a href="http://bit.ly/1qIlgvt" target="_blank"><h4>BigNumber C++ Library</h4></a>
             <p>
                 BigNumber is a C++ class that allows for the creation and computation of arbitrary-length integers.<br/>
-                <a href="http://bit.ly/1qIlgvt" target="_blank">Click here</a> to view the source code and download the
-                library.
+                <div class="pbs">
+                    <a href="http://bit.ly/1qIlgvt" target="_blank" class="projectButton">Github</a>
+                    <a href="https://github.com/Limeoats/BigNumber/releases/tag/1.0" target="_blank" class="projectButton">Download</a>
+                </div>
             </p>
         </div>
         <div class="subsection">
@@ -108,6 +113,12 @@
                 An open source in-game map/animation editor for 2D C++ SFML game development projects.
                 You can use it to edit maps and animations in real-time with your player, physics, collisions, and
                 everything else being rendered. This makes for extremely efficient 2D level creation.
+                <div class="pbs">
+                    <a href="lime2d.html" class="projectButton">Open</a>
+                    <a href="https://github.com/Limeoats/Lime2D" target="_blank" class="projectButton">Github</a>
+                    <a href="lime2d-setup-guide.html" class="projectButton">Tutorial</a>
+                    <a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank" class="projectButton">Video</a>
+                </div>
             </p>
         </div>
     </div>
