updates for mobile optimization

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="description">
                 For our one year anniversary, I made my girlfriend a game. Oats needs to deliver a very important
                 message to Lime, but he can't do it without your help. Navigate through multiple levels of
-                tricky platforming to win!<br/>
+                tricky platforming to win!
                 <div class="pbs">
                     <a href="a-note-for-lime.html" class="projectButton">Open</a>
                 </div>
