--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 Project Euler
             </div>
             <div class="description">
-                I spend a lot of my time working on solutions to the Project Euler problems in Java.<br/>
+                I spend a lot of my time working on solutions to the Project Euler problems in C++.<br/>
                 <div class="pbs">
                     <a href="http://github.com/limeoats/project-euler" target="_blank" class="projectButton">Github</a>
                     <a href="http://projecteuler.net" target="_blank" class="projectButton">Website</a>
