--- a/lime2d.html
+++ b/lime2d.html
@@ -54,7 +54,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="http://www.limeoats.com">
-            <img src="http://www.limeoats.com/images/favicon/apple-touch-icon-72x72.png" />
+            <img src="images/logo.png" />
         </a>
         <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
 
