--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div>
           <div class="project-buttons">
             <a class="project-button" target="_blank" href="https://github.com/Limeoats/BigNumber/releases/tag/1.0">Download</a>
-            <a class="project-button" target="_blank" href="https://github.com/limeoats/bignumber">Source code</a>
+            <a class="project-button" target="_blank" href="http://bit.ly/1qIlgvt">Source code</a>
           </div>
           <div class="twitter-share">
               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.github.com/Limeoats/BigNumber"
@@ -243,7 +243,7 @@
             <a class="project-tag" target="_blank" href="https://www.jetbrains.com/clion">JetBrains CLion</a>
           </div>
           <div class="project-buttons">
-            <a class="project-button" href="clion-and-cmake.html">Read</a>
+            <a class="project-button" href="http://bit.ly/28RRuMV">Read</a>
           </div>
           <div class="twitter-share">
               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/clion-and-cmake.html"
@@ -270,7 +270,7 @@
             <a class="project-tag" target="_blank" href="http://www.unity3d.com">Unity</a>
           </div>
           <div class="project-buttons">
-            <a class="project-button" href="3d-lagging-camera-unity.html">Read</a>
+            <a class="project-button" href="http://bit.ly/1XTa6yO">Read</a>
           </div>
           <div class="twitter-share">
               <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/3d-lagging-camera-unity.html"
