--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p>Here you can find all of the projects I've worked on, information about what I'm currently working on, some programming-related
           blog posts, and even some published work.</p>
         <p>If you wish to donate for any reason, please
-          <a href="https://www.paypal.com/donate/?token=LW4PWlpRYV6owojIQjN5V_eLOR3qaJnoikIpaSOZPpxeJY-oJPKyUybkGT8yLhRsgktsF0&country.x=US&locale.x=US"
+          <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=admin@limeoats.com&lc=US&item_name=Donation+to+Limeoats&no_note=0&cn=&curency_code=USD&bn=PP-DonationsBF:btn_donateCC_LG.gif:NonHosted"
             target="_blank">click here.</a>
         </p>
         <p>Thanks for visiting and enjoy!</p>
