--- a/3d-lagging-camera-unity.html
+++ b/3d-lagging-camera-unity.html
@@ -1,6 +1,13 @@
 <html>
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PZRQCT6');</script>
+        <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>3D Lagging Camera in Unity | Limeoats</title>
@@ -43,6 +50,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZRQCT6"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
+      
     <meta itemprop="name" content=" 3D Lagging Camera in Unity | Limeoats">
     <meta itemprop="description" content="A tutorial on how I created a 3rd Person camera in Unity that follows and lags behind the player.">
   <nav class="navbar navbar-expand-sm navbar-light bg-faded">
