--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -1,37 +1,45 @@
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>A Note For Lime | Limeoats</title>
-    <link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
-    <meta name="author" content="Limeoats">
 
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="css/syntaxhighlight.css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PZRQCT6');</script>
+<!-- End Google Tag Manager -->
 
-    <link rel="icon" href="images/favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="favicon.ico" />
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>A Note For Lime | Limeoats</title>
+<link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
+<meta name="author" content="Limeoats">
 
-    <script src="js/highlight.pack.js"></script>
-    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+<link rel="stylesheet" href="css/syntaxhighlight.css">
+<link rel="stylesheet" href="css/styles.css" type="text/css" />
 
-    <script>hljs.initHighlightingOnLoad();</script>
+<link rel="icon" href="images/favicon.png" type="image/png" />
+<link rel="shortcut icon" href="favicon.ico" />
 
-    <script>
+<script src="js/highlight.pack.js"></script>
+<script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
+
+<script>hljs.initHighlightingOnLoad();</script>
+
+<script>
         //Google analytics
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
@@ -42,19 +50,24 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZRQCT6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <meta itemprop="name" content=" A Note For Lime | Limeoats">
     <meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
     <nav class="navbar navbar-expand-sm navbar-light bg-faded">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- Brand -->
-        <a class="navbar-brand" href="http://www.limeoats.com">
-            <img src="images/logo.png" />
-        </a>
-        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+    <!-- Brand -->
+    <a class="navbar-brand" href="http://www.limeoats.com">
+        <img src="images/logo.png" />
+    </a>
+    <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
 
         <!-- Links -->
         <div class="collapse navbar-collapse justify-content-end" id="nav-content">
@@ -120,46 +133,46 @@
                                 fjs.parentNode.insertBefore(js, fjs);
                             }
                         }(document, 'script', 'twitter-wjs');</script>
-                </p>
-                <p>
-                    <div id="disqus_thread"></div>
-                    <script type="text/javascript">
-                        /* * * CONFIGURATION VARIABLES * * */
-                        var disqus_shortname = 'limeoats';
-                        /* * * DON'T EDIT BELOW THIS LINE * * */
-                        (function () {
-                            var dsq = document.createElement('script');
-                            dsq.type = 'text/javascript';
-                            dsq.async = true;
-                            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                        })();
-                    </script>
-                </p>
+                    </p>
+                    <p>
+                        <div id="disqus_thread"></div>
+                        <script type="text/javascript">
+                            /* * * CONFIGURATION VARIABLES * * */
+                            var disqus_shortname = 'limeoats';
+                            /* * * DON'T EDIT BELOW THIS LINE * * */
+                            (function () {
+                                var dsq = document.createElement('script');
+                                dsq.type = 'text/javascript';
+                                dsq.async = true;
+                                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                            })();
+                        </script>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer">
-        <div class="copyright">
-            &copy; 2012
-            <span id="currentYear"></span>
-            <a href="http://www.limeoats.com">Limeoats</a>
-        </div>
-        <div class="footer-icons">
-            <a href="https://www.twitter.com/limeoats" target="_blank">
-                <img src="images/twitter.png" title="Twitter" />
-            </a>
-            <a href="https://www.instagram.com/limeoats" target="_blank">
-                <img src="images/instagram.png" title="Instagram" />
-                <a href="https://www.youtube.com/limeoats" target="_blank">
-                    <img src="images/youtube.png" title="Youtube" />
+        <div class="footer">
+            <div class="copyright">
+                &copy; 2012
+                <span id="currentYear"></span>
+                <a href="http://www.limeoats.com">Limeoats</a>
+            </div>
+            <div class="footer-icons">
+                <a href="https://www.twitter.com/limeoats" target="_blank">
+                    <img src="images/twitter.png" title="Twitter" />
                 </a>
-                <a href="https://www.github.com/limeoats" target="_blank">
-                    <img src="images/github.png" title="Github" />
-                </a>
-        </div>
-    </div>
-</body>
+                <a href="https://www.instagram.com/limeoats" target="_blank">
+                    <img src="images/instagram.png" title="Instagram" />
+                    <a href="https://www.youtube.com/limeoats" target="_blank">
+                        <img src="images/youtube.png" title="Youtube" />
+                    </a>
+                    <a href="https://www.github.com/limeoats" target="_blank">
+                        <img src="images/github.png" title="Github" />
+                    </a>
+                </div>
+            </div>
+        </body>
 
-</html>
+        </html>
