--- a/discord.html
+++ b/discord.html
@@ -1,34 +1,42 @@
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Discord | Limeoats</title>
-    <link rel="canonical" href="http://www.limeoats.com/discord.html"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta name="description" content="The official Limeoats Discord chat server.">
-    <meta name="author" content="Limeoats">
 
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="css/syntaxhighlight.css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PZRQCT6');</script>
+<!-- End Google Tag Manager -->
 
-    <link rel="icon" href="images/favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="favicon.ico" />
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>Discord | Limeoats</title>
+<link rel="canonical" href="http://www.limeoats.com/discord.html"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="description" content="The official Limeoats Discord chat server.">
+<meta name="author" content="Limeoats">
 
-    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+<link rel="stylesheet" href="css/syntaxhighlight.css">
+<link rel="stylesheet" href="css/styles.css" type="text/css" />
 
-    <script>
+<link rel="icon" href="images/favicon.png" type="image/png" />
+<link rel="shortcut icon" href="favicon.ico" />
+
+<script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
+
+<script>
         //Google analytics
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
@@ -44,17 +52,22 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZRQCT6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <nav class="navbar navbar-expand-sm navbar-light bg-faded">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- Brand -->
-        <a class="navbar-brand" href="http://www.limeoats.com">
-            <img src="images/logo.png" />
-        </a>
-        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+    <!-- Brand -->
+    <a class="navbar-brand" href="http://www.limeoats.com">
+        <img src="images/logo.png" />
+    </a>
+    <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
 
         <!-- Links -->
         <div class="collapse navbar-collapse justify-content-end" id="nav-content">
@@ -98,8 +111,8 @@
                 <a href="https://www.github.com/limeoats" target="_blank">
                     <img src="images/github.png" title="Github" />
                 </a>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 
-</html>
+    </html>
