--- a/lime2d-setup-guide.html
+++ b/lime2d-setup-guide.html
@@ -1,6 +1,14 @@
 <html>
 
 <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+                })(window,document,'script','dataLayer','GTM-PZRQCT6');</script>
+                <!-- End Google Tag Manager -->
+            
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Lime2D Setup Guide | Limeoats</title>
@@ -44,6 +52,12 @@
 </head>
 
 <body>
+      <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZRQCT6"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    
     <meta itemprop="name" content="Lime2D Setup Guide | Limeoats">
     <meta itemprop="description" content="A guide for setting up Lime2D with your C++ project.">
     <nav class="navbar navbar-expand-sm navbar-light bg-faded">
