replace bitly links with normal links

--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -116,8 +116,8 @@
                 <p>
                     Download A Note For Lime by clicking the button below for your operating system.
                     <div id="a-note-for-lime-buttons" class="project-buttons" style="padding-top: 10px;">
-                        <a class="project-button" href="http://bit.ly/1Oakc8k">Windows</a>
-                        <a class="project-button" href="http://bit.ly/1liYcBo">Mac OS X</a>
+                        <a class="project-button" href="http://www.limeoats.com/downloads/A_Note_For_Lime_Windows.zip">Windows</a>
+                        <a class="project-button" href="http://www.limeoats.com/downloads/A_Note_For_Lime_Mac.zip">Mac OS X</a>
                         <a class="project-button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">Donate</a>
                     </div>
                 </p>
