fix title of post

--- a/clion-and-cmake.html
+++ b/clion-and-cmake.html
@@ -96,7 +96,7 @@
       <div class="main-container">
         <div class="section-container">
           <div class="section-title">
-            CLion, CMake, and Statically Linked Libraries
+            CLion and CMake
           </div>
           <div class="section-text-small">
             <p>
