--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<title>Home | Limeoats</title>
+<title>Limeoats</title>
 <link rel="canonical" href="http://www.limeoats.com"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<meta name="description" content="Hello! My name is Mark and I enjoy programming.">
+<meta name="description" content="Hello! My name is Mark and I develop video games, libraries, and tutorials related to all things programming.">
 <meta name="author" content="Limeoats">
 
 <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
@@ -118,7 +118,7 @@
 
       </div>
     </div>
-    
+
     <div class="category-title">
       <a name="projects"></a>
       { Projects }
